app/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetik-svc
  namespace: default
spec:
  selector:
    app: kubernetik-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
