app/kube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: "/app"
            backend:
              serviceName: kubernetik_svc
              servicePort: 80
